<resources>
    <string name="app_name">Hanlight_AOS</string>
    <string name="logo">Logo</string>
    <string name="signup">회원가입</string>
    <string name="key">회원가입 키</string>
    <string name="login">로그인</string>
    <string name="keyHint">제공된 핀 번호를 입력해주세요.</string>
    <string name="signFormError">회원가입 키가 올바른 형식이 아닙니다.</string>
    <string name="phone">전화번호</string>
    <string name="phoneRule">휴대폰 번호를 - 빼고 입력해주세요.</string>
    <string name="phoneFormError">전화번호가 올바른 형식이 아닙니다.</string>
    <string name="auth">인증하기</string>
    <string name="signupNotice">전화번호 인증 시 이용 약관과 개인정보처리방침에 동의하게 됩니다.</string>
    <string name="id">아이디</string>
    <string name="idRule">5~20자의 영문 소문자, 숫자와 특수기호 _ , /</string>
    <string name="signupFormError">8~16자의 영문 대소문자, 숫자나 특수문자(키보드1~0)만 사용 가능합니다.</string>
    <string name="password">비밀번호</string>
    <string name="passwordRule">8~16자의 영문 대소문자, 숫자나 특수문자(키보드1~0)</string>
    <string name="checkPassword">비밀번호 확인</string>
    <string name="passwordMatchError">비밀번호와 일치하지 않습니다.</string>
    <string name="loginError">한빛에 등록되지 않은 아이디거나, \n아이디 또는 비밀번호를 잘못 입력하셨습니다.</string>
    <string name="searchId">ID찾기</string>
    <string name="searchPassword">비밀번호 찾기</string>
    <string name="backbutton">backButton</string>
    <string name="resetPassword">비밀번호 재설정</string>
    <string name="idFormError">형식이 잘못되었거나 존재하지 않는 아이디 입니다.</string>
    <string name="cheack">확인</string>
    <string name="setting">설정</string>
    <string name="searchId_kr">아이디 찾기</string>
</resources>