<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchPasswordActivity">

    <ImageView
        android:id="@+id/backImg_SearchPassword"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/back_arrow"
        app:layout_constraintBottom_toTopOf="@id/hanlightLogo_SearchPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/hanlightLogo_SearchPassword"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="69dp"
        android:layout_marginRight="156dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/hanlight_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_SearchPassword"
        style="@style/boldTextStyle"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginLeft="141dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="141dp"
        android:text="@string/searchPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hanlightLogo_SearchPassword" />

    <TextView
        android:id="@+id/text2_SearchPassword"
        style="@style/regularTextStyle"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="8dp"
        android:gravity="start"
        android:text="@string/id"
        app:layout_constraintBottom_toTopOf="@id/idEdt_SearchPassword"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/idEdt_SearchPassword"
        style="@style/regularTextStyle"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="56dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/id"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@id/error_SearchPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlSymmetry,TextFields" />

    <TextView
        android:id="@+id/error_SearchPassword"
        style="@style/errorTextStyle"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="11dp"
        android:gravity="start"
        android:text="@string/idFormError"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/text3_SearchPassword"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/text3_SearchPassword"
        style="@style/regularTextStyle"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="8dp"
        android:gravity="start"
        android:text="@string/phone"
        app:layout_constraintBottom_toTopOf="@id/phoneEdt_SearchPassword"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/phoneEdt_SearchPassword"
        style="@style/regularTextStyle"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="56dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/phoneRule"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@id/error2_SearchPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/error2_SearchPassword"
        style="@style/errorTextStyle"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="25dp"
        android:gravity="start"
        android:text="@string/phoneFormError"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/authBtn_SearchPassword"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/authBtn_SearchPassword"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="254dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="194dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/bold"
        android:text="@string/auth"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_SearchPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>