<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/hanlightLogo_Login"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="69dp"
        android:layout_marginRight="156dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/hanlight_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idEdt_Login"
        style="@style/regularTextStyle"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/id"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@id/passwordEdt_Login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/passwordEdt_Login"
        style="@style/regularTextStyle"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@id/passwordErrorTx_Login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/passwordErrorTx_Login"
        style="@style/errorTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="45dp"
        android:text="@string/loginError"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/loginBtn_Login"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/loginBtn_Login"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="68dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="20.5dp"
        android:background="@drawable/button_style"
        android:clickable="false"
        android:fontFamily="@font/bold"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="17.5dp"
        android:layout_marginRight="17.5dp"
        android:layout_marginBottom="11.5dp"
        android:background="#d3d3d3"
        app:layout_constraintBottom_toTopOf="@id/searchPassword_Login" />

    <TextView
        android:id="@+id/searchID_Login"
        style="@style/bottomTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="298dp"
        android:layout_marginEnd="260dp"
        android:layout_marginBottom="230dp"
        android:text="@string/searchId"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hanlightLogo_Login" />

    <View
        android:id="@+id/line1"
        android:layout_width="1dp"
        android:layout_height="17dp"
        android:layout_marginTop="298dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="230dp"
        android:background="#d3d3d3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/searchID_Login"
        app:layout_constraintRight_toLeftOf="@id/searchPassword_Login"
        app:layout_constraintTop_toBottomOf="@id/hanlightLogo_Login" />

    <TextView
        android:id="@+id/searchPassword_Login"
        style="@style/bottomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="298dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="230dp"
        android:text="@string/searchPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/searchID_Login"
        app:layout_constraintRight_toLeftOf="@id/signup_Login"
        app:layout_constraintTop_toBottomOf="@id/hanlightLogo_Login" />

    <View
        android:id="@+id/line2"
        android:layout_width="1dp"
        android:layout_height="17dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="298dp"
        android:layout_marginBottom="230dp"
        android:background="#d3d3d3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/searchPassword_Login"
        app:layout_constraintRight_toLeftOf="@id/signup_Login"
        app:layout_constraintTop_toBottomOf="@id/hanlightLogo_Login" />

    <TextView
        android:id="@+id/signup_Login"
        style="@style/bottomTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="298dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="230dp"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hanlightLogo_Login" />

</androidx.constraintlayout.widget.ConstraintLayout>